feat: make CORS origins configurable via environment variable